[基因库初始化]性能优化